syntax = "proto3";

option go_package = "github.com/footprintai/restcol/api/pb";

package restcol.api;

import "google/api/httpbody.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "RestCol API Documentations";
        version: "1.0";
        contact: {
            name: "RestCol API Documentations";
            url: "https://github.com/footprintai/restcol";
            email: "";
        };
        license: {
            name: "BSD 3-Clause License";
            url: "https://github.com/footprintai/grandturk/blob/master/LICENSE.txt";
        };
    };
    // Overwriting host entry breaks tests, so this is not done here.
    external_docs: {
        url: "https://github.com/footprintai/restcol";
        description: "restapi";
    }
    schemes: HTTPS;
    consumes: "application/json";
    produces: "application/json";
    security_definitions: {
        security: {
            key: "ApiKeyAuth";
            value: {
                type: TYPE_API_KEY;
                in: IN_HEADER;
                name: "Authorization";
            }
        }
    }
    security: {
        security_requirement: {
            key: "ApiKeyAuth";
            value: {};
        }
    }
};

service RestColService {
    rpc GetSwaggerDoc(GetSwaggerDocRequest) returns (google.api.HttpBody) {
        option (google.api.http) = {
            get: "/v1/projects/{projectId}/apidoc"
            additional_bindings {
                get: "/v1/projects/{projectId}/collections/{collectionId}/apidoc"
            }
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Return API Doc in Swagger"
            tags: "swagger"
        };
    }
    rpc CreateCollection(CreateCollectionRequest) returns (CreateCollectionResponse) {
        option (google.api.http) = {
            post: "/v1/projects/{projectId}/collections"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Add collection endpoint, a collection is a set of documents with scheme-free."
            tags: "collections"
        };
    }

    rpc ListCollections(ListCollectionsRequest) returns (ListCollectionsResponse) {
        option (google.api.http) = {
            get: "/v1/projects/{projectId}/collections"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "list collections endpoint"
            tags: "collections"
        };

    }

    rpc GetCollection(GetCollectionRequest) returns (GetCollectionResponse) {
        option (google.api.http) = {
            get: "/v1/projects/{projectId}/collections/{collectionId}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "retrieve an individual collection information and document keys assocaited with it"
            tags: "collections"
        };

    }

    rpc DeleteCollection(DeleteCollectionRequest) returns (DeleteCollectionResponse) {
        option (google.api.http) = {
            delete: "/v1/projects/{projectId}/collections/{collectionId}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "remove an individual collection and its associated doc"
            tags: "collections"
        };
    }

    rpc CreateDocument(CreateDocumentRequest) returns (CreateDocumentResponse) {
        option (google.api.http) = {
            post: "/v1/projects/{projectId}/newdoc"
            body: "*"
            additional_bindings {
                post: "/v1/projects/{projectId}/collections/{collectionId}:newdoc"
                body: "*"
            }
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "create a document to the collection"
            tags: "document"
        };
    }

    // GetDocument endpoint is a generic endpoint for retrieving data across multiple collections
    rpc GetDocument(GetDocumentRequest) returns (GetDocumentResponse) {
        option (google.api.http) = {
            get: "/v1/projects/{projectId}/collections/{collectionId}/docs/{documentId}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "retrieve a document information from the collection."
            tags: "document"
        };
    }

    // DeleteDocument endpoint is a generic endpoint for deleting a specific data
    rpc DeleteDocument(DeleteDocumentRequest) returns (DeleteDocumentResponse) {
        option (google.api.http) = {
            delete: "/v1/projects/{projectId}/collections/{collectionId}/docs/{documentId}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Remove the specific document from the collection"
            tags: "document"
        };
    }

    rpc QueryDocumentsStream(QueryDocumentStreamRequest) returns (stream GetDocumentResponse) {
        option (google.api.http) = {
            get: "/v1/projects/{projectId}/collections/{collectionId}/docs:stream"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "run query against a collection, return documents in streaming which matched the query"
            tags: "document"
        };
    }

    rpc QueryDocument(QueryDocumentRequest) returns (QueryDocumentResponse) {
        option (google.api.http) = {
            get: "/v1/projects/{projectId}/collections/{collectionId}/docs"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "run query against a collection, return documents matched the query"
            tags: "document"
        };
    }

}

message GetSwaggerDocRequest {
    string projectId = 1;
    string collectionId = 2;
}

message SchemaField {
    string name = 1;
    SchemaFieldDataType datatype = 2; 
    optional google.protobuf.Value example = 3;
}

enum SchemaFieldDataType {
    SCHEMA_FIELD_DATA_TYPE_NONE = 0;
    SCHEMA_FIELD_DATA_TYPE_STRING = 1;
    SCHEMA_FIELD_DATA_TYPE_NUMBER = 2;
    SCHEMA_FIELD_DATA_TYPE_INTEGER = 3;
    SCHEMA_FIELD_DATA_TYPE_BOOL = 4;
    SCHEMA_FIELD_DATA_TYPE_OBJECT = 5;
    SCHEMA_FIELD_DATA_TYPE_ARRAY = 6;
}

message CollectionMetadata {
    // pid is used to isolate resources (by projects), making the collections are belonged to a specific project
    string projectId = 1;

    // cid (aka collectionId) would be used to naming ${collectionId} field, that field should be url safe
    // otherwise an error would be returned.
    // leave it empty would generate a random uuid for ${collectionId}
    string collectionId = 2;

    google.protobuf.Timestamp _createdAt = 10; // ts when the collection was created
    optional google.protobuf.Timestamp _deletedAt = 11; // ts when the collection was deleted
}

message CreateCollectionRequest {
    string projectId = 1;
    optional string collectionId = 2;

    optional string description = 10;
    optional CollectionType collectionType = 11;
    repeated SchemaField schemas= 12;
}

enum CollectionType {
    COLLECTION_TYPE_NONE = 0;
    COLLECTION_TYPE_REGULAR_FILES = 1;
    COLLECTION_TYPE_TIMESERIES = 2;
    COLLECTION_TYPE_TRANSACTION = 3;
    COLLECTION_TYPE_VECTOR = 4;
    COLLECTION_TYPE_PROXY = 5;
}

message CreateCollectionResponse {
    CollectionMetadata _metadata = 1;

    string description = 2;
    CollectionType collectionType = 3;
    repeated SchemaField schemas = 10;
}

message ListCollectionsRequest {
    string projectId = 1;
}

message ListCollectionsResponse {}

message GetCollectionRequest{
    string projectId = 1;
    string collectionId = 2;
}

message GetCollectionResponse{
    CollectionMetadata _metadata = 1;

    string description = 2;
    CollectionType collectionType = 3;
    repeated SchemaField schemas = 10;
}

message DeleteCollectionRequest {
    string projectId = 1;
    string collectionId = 2;
}

message DeleteCollectionResponse {}

enum DataFormat {
    DATA_FORMAT_UNKNOWN = 0;
    DATA_FORMAT_AUTO = 1;
    DATA_FORMAT_JSON = 2;
    DATA_FORMAT_CSV = 3;
    DATA_FORMAT_XML = 4;
    DATA_FORMAT_URL = 5;
    DATA_FORMAT_MEDIA = 6;
}

message DataMetadata {
    // projectId is project id
    string projectId = 1;

    // collectionId is collection id from collection data
    string collectionId = 2;

    // schemaId is the schema index stored in collection
    string schemaId = 3;

    // did (aka dataid) would be used to naming ${documentId} field, that field should be url safe
    string documentId = 4;

    google.protobuf.Timestamp _createdAt = 10; // ts when the record was created
    optional google.protobuf.Timestamp _deletedAt = 11; // ts when the record was deleted
    optional DataFormat dataformat = 12;
}


message CreateDocumentRequest {
    string projectId = 1;
    string collectionId = 2;
    optional string documentId = 3;

    bytes data = 10; // data represents rawdata for any kind of formating
    optional DataFormat dataformat = 11;
}

message CreateDocumentResponse {
    DataMetadata _metadata = 1;
}

message GetDocumentRequest{
    string projectId = 1;
    string collectionId = 2;
    string documentId = 3;
    repeated string fieldSelectors = 4; // dot-concatenated fields, ex: fielda.fieldb.fieldc
}

message GetDocumentResponse{
    DataMetadata _metadata = 1;
    google.protobuf.Value data = 2;
}

message DeleteDocumentRequest {
    string projectId = 1;
    string collectionId = 2;
    string documentId = 3;
}

message DeleteDocumentResponse {}

message QueryDocumentStreamRequest{
    string projectId = 1;
    string collectionId = 2;
    google.protobuf.Timestamp sinceTs = 3;
    optional google.protobuf.Timestamp endedAt = 4; // endedAt specifies when is the ended timeframe of the query
    repeated string fieldSelectors = 5; // dot-concatenated fields, ex: fielda.fieldb.fieldc
    optional bool followUpMode = 6; // if on, the service would keep watch new coming docs
    optional int32 limitCount = 7;
}

message QueryDocumentRequest {
    string projectId = 1;
    string collectionId = 2;
    google.protobuf.Timestamp sinceTs = 3;
    optional google.protobuf.Timestamp endedAt = 4; // endedAt specifies when is the ended timeframe of the query
    repeated string fieldSelectors = 5; // dot-concatenated fields, ex: fielda.fieldb.fieldc
    optional int32 limitCount = 6;
}

message QueryDocumentResponse {
    repeated GetDocumentResponse docs = 1;
}
